--- a/cdn.html
+++ b/cdn.html
@@ -1,3 +1,16 @@
-<script src="
-https://cdn.jsdelivr.net/npm/@ruffle-rs/ruffle@0.1.0-nightly.2024.11.7/ruffle.min.js
-"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Play Learn to Fly</title>
+    <script src="https://cdn.jsdelivr.net/npm/@ruffle-rs/ruffle@0.1.0-nightly.2024.11.7/ruffle.min.js"></script>
+</head>
+<body>
+    <h1>Play Learn to Fly</h1>
+    <div>
+        <object data="learntofly.swf" width="800" height="600"></object>
+    </div>
+</body>
+</html>
