--- a/cdn.html
+++ b/cdn.html
@@ -3,14 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play Learn to Fly</title>
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+    <title>LearnToFly - upperX</title>
     <script src="https://cdn.jsdelivr.net/npm/@ruffle-rs/ruffle@0.1.0-nightly.2024.11.7/ruffle.min.js"></script>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #000; /* Optional: background color */
+        }
+        object {
+            width: 100%;
+            height: 100%;
+            max-width: 1200px; /* Optional: max width for better display */
+            max-height: 800px; /* Optional: max height for better display */
+        }
+    </style>
 </head>
 <body>
-    <h1>Play Learn to Fly</h1>
-    <div>
-        <object data="learntofly.swf" width="800" height="600"></object>
-    </div>
+    <object data="learntofly.swf" width="100%" height="100%"></object>
 </body>
 </html>
