--- a/learntoflyplayer.html
+++ b/learntoflyplayer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    <title>LearnToFly - upperX</title>
+    <title>Play Learn to Fly</title>
     <script src="https://cdn.jsdelivr.net/npm/@ruffle-rs/ruffle@0.1.0-nightly.2024.11.7/ruffle.min.js"></script>
     <style>
         body, html {
@@ -15,19 +15,17 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #000;
+            background-color: #000; /* Optional: background color */
         }
-        #game-container {
-            width: 800px; /* Set this to your game's native width */
-            height: 600px; /* Set this to your game's native height */
-            max-width: 100%;
-            max-height: 100%;
+        object {
+            width: 100%;
+            height: 100%;
+            max-width: 800px; /* Optional: max width for better display */
+            max-height: 800px; /* Optional: max height for better display */
         }
     </style>
 </head>
 <body>
-    <div id="game-container">
-        <object data="learntofly.swf" width="100%" height="100%"></object>
-    </div>
+    <object data="learntofly.swf" width="100%" height="100%"></object>
 </body>
 </html>
