--- a/cdnlearntofly.html
+++ b/cdnlearntofly.html
@@ -17,15 +17,23 @@
             align-items: center;
             background-color: #000; /* Optional: background color */
         }
+
+        #game-container {
+            width: 80%; /* Set to percentage of the screen width */
+            max-width: 1200px; /* Maximum width for better scaling */
+            height: auto;
+            aspect-ratio: 4 / 3; /* Aspect ratio of Learn to Fly (800x600) */
+        }
+
         object {
             width: 100%;
             height: 100%;
-            max-width: 800px; /* Optional: max width for better display */
-            max-height: 800px; /* Optional: max height for better display */
         }
     </style>
 </head>
 <body>
-    <object data="learntofly.swf" width="100%" height="100%"></object>
+    <div id="game-container">
+        <object data="learntofly.swf" width="100%" height="100%"></object>
+    </div>
 </body>
 </html>
