--- a/cdnlearntofly.html
+++ b/cdnlearntofly.html
@@ -21,8 +21,7 @@
         #game-container {
             width: 80%; /* Set to percentage of the screen width */
             max-width: 1200px; /* Maximum width for better scaling */
-            height: auto;
-            aspect-ratio: 4 / 3; /* Aspect ratio of Learn to Fly (800x600) */
+            height: 600px; /* Fixed height to maintain original size */
         }
 
         object {
