--- a/cdnlearntofly.html
+++ b/cdnlearntofly.html
@@ -19,8 +19,8 @@
         }
 
         #game-container {
-            width: 80%; /* Set to percentage of the screen width */
-            max-width: 1200px; /* Maximum width for better scaling */
+            width: 80%; /* Width will be 80% of the screen */
+            max-width: 1200px; /* Optional: maximum width for large screens */
             height: 600px; /* Fixed height to maintain original size */
         }
 
