--- a/cdnlearntofly.html
+++ b/cdnlearntofly.html
@@ -20,8 +20,8 @@
 
         #game-container {
             width: 80%; /* Width will be 80% of the screen */
-            max-width: 1200px; /* Optional: maximum width for large screens */
-            height: 600px; /* Fixed height to maintain original size */
+            max-width: 1200px; /* Optional: maximum width for larger screens */
+            aspect-ratio: 4 / 3; /* Aspect ratio of 800x600 */
         }
 
         object {
