--- a/cdnlearntofly.html
+++ b/cdnlearntofly.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    <title>LearnToFly - upperX</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>learntofly - UpperX</title>
     <script src="https://cdn.jsdelivr.net/npm/@ruffle-rs/ruffle@0.1.0-nightly.2024.11.7/ruffle.min.js"></script>
     <style>
         body, html {
@@ -16,23 +16,26 @@
             justify-content: center;
             align-items: center;
             background-color: #000; /* Optional: background color */
+            overflow: hidden; /* Prevent overflow if the game is too tall */
         }
 
         #game-container {
-            width: 80%; /* Width will be 80% of the screen */
-            max-width: 1200px; /* Optional: maximum width for larger screens */
-            aspect-ratio: 4 / 3; /* Aspect ratio of 800x600 */
+            width: 80vw; /* Width is 80% of the viewport width */
+            max-width: 1000px; /* Optional: maximum width for large screens */
+            height: auto; /* Let height adjust based on the aspect ratio */
+            position: relative;
         }
 
         object {
             width: 100%;
             height: 100%;
+            max-height: 100vh; /* Limit the game height to the viewport height */
         }
     </style>
 </head>
 <body>
     <div id="game-container">
-        <object data="learntofly.swf" width="100%" height="100%"></object>
+        <object data="learntofly.swf" type="application/x-shockwave-flash" width="100%" height="auto"></object>
     </div>
 </body>
 </html>
