--- a/cdnlearntofly.html
+++ b/cdnlearntofly.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>learntofly - UpperX</title>
+    <title>SWF Game - UpperX</title>
     <script src="https://cdn.jsdelivr.net/npm/@ruffle-rs/ruffle@0.1.0-nightly.2024.11.7/ruffle.min.js"></script>
     <style>
         body, html {
@@ -16,26 +16,27 @@
             justify-content: center;
             align-items: center;
             background-color: #000; /* Optional: background color */
-            overflow: hidden; /* Prevent overflow if the game is too tall */
         }
 
         #game-container {
-            width: 80vw; /* Width is 80% of the viewport width */
-            max-width: 1000px; /* Optional: maximum width for large screens */
-            height: auto; /* Let height adjust based on the aspect ratio */
-            position: relative;
+            width: 80vw; /* You can change this to adjust the width */
+            max-width: 1000px; /* Max width for large screens, optional */
+            height: auto; /* Let height adjust based on aspect ratio */
         }
 
         object {
             width: 100%;
-            height: 100%;
-            max-height: 100vh; /* Limit the game height to the viewport height */
+            height: auto; /* Height adjusts to keep the aspect ratio */
         }
     </style>
 </head>
 <body>
     <div id="game-container">
-        <object data="learntofly.swf" type="application/x-shockwave-flash" width="100%" height="auto"></object>
+        <!-- Change the "data" attribute to point to your SWF game file -->
+        <object data="learntofly.swf" type="application/x-shockwave-flash" width="100%" height="auto">
+            <!-- You can specify a fallback message here if SWF is unsupported -->
+            <p>Your browser does not support Flash.</p>
+        </object>
     </div>
 </body>
 </html>
