--- a/cdnlearntofly.html
+++ b/cdnlearntofly.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SWF Game - UpperX</title>
+    <title>LearnToFly - UpperX</title>
     <script src="https://cdn.jsdelivr.net/npm/@ruffle-rs/ruffle@0.1.0-nightly.2024.11.7/ruffle.min.js"></script>
     <style>
         body, html {
@@ -33,7 +33,7 @@
 <body>
     <div id="game-container">
         <!-- Change the "data" attribute to point to your SWF game file -->
-        <object data="learntofly.swf" type="application/x-shockwave-flash" width="100%" height="auto">
+        <object data="learntofly.swf" type="application/x-shockwave-flash" width="80%" height="80">
             <!-- You can specify a fallback message here if SWF is unsupported -->
             <p>Your browser does not support Flash.</p>
         </object>
