--- a/cdnlearntofly.html
+++ b/cdnlearntofly.html
@@ -33,7 +33,7 @@
 <body>
     <div id="game-container">
         <!-- Change the "data" attribute to point to your SWF game file -->
-        <object data="learntofly.swf" type="application/x-shockwave-flash" width="80%" height="80">
+        <object data="learntofly.swf" type="application/x-shockwave-flash" width="100%" height="100%">
             <!-- You can specify a fallback message here if SWF is unsupported -->
             <p>Your browser does not support Flash.</p>
         </object>
