--- a/cdnlearntofly.html
+++ b/cdnlearntofly.html
@@ -19,7 +19,7 @@
         }
 
         #game-container {
-            width: 80vw; /* You can change this to adjust the width */
+            width: 50vw; /* You can change this to adjust the width */
             max-width: 1000px; /* Max width for large screens, optional */
             height: auto; /* Let height adjust based on aspect ratio */
         }
@@ -33,7 +33,7 @@
 <body>
     <div id="game-container">
         <!-- Change the "data" attribute to point to your SWF game file -->
-        <object data="learntofly.swf" type="application/x-shockwave-flash" width="100%" height="100%">
+        <object data="learntofly.swf" type="application/x-shockwave-flash" width="100%" height="auto">
             <!-- You can specify a fallback message here if SWF is unsupported -->
             <p>Your browser does not support Flash.</p>
         </object>
