--- a/cdnlearntofly.html
+++ b/cdnlearntofly.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LearnToFly - UpperX</title>
+    <title>LeftClickOnGame, fullscreen</title>
     <script src="https://cdn.jsdelivr.net/npm/@ruffle-rs/ruffle@0.1.0-nightly.2024.11.7/ruffle.min.js"></script>
     <style>
         body, html {
@@ -19,7 +19,7 @@
         }
 
         #game-container {
-            width: 45vw; /* You can change this to adjust the width */
+            width: 40vw; /* You can change this to adjust the width */
             max-width: 1000px; /* Max width for large screens, optional */
             height: auto; /* Let height adjust based on aspect ratio */
         }
@@ -40,3 +40,4 @@
     </div>
 </body>
 </html>
+#Game For upperX
