--- a/cdnlearntofly.html
+++ b/cdnlearntofly.html
@@ -19,7 +19,7 @@
         }
 
         #game-container {
-            width: auto; /* You can change this to adjust the width */
+            width: 561vw; /* You can change this to adjust the width */
             max-width: 1000px; /* Max width for large screens, optional */
             height: auto; /* Let height adjust based on aspect ratio */
         }
