--- a/games1/play/8-ball-pool.html
+++ b/games1/play/8-ball-pool.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="../images/favicon.png" sizes="32x32">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>8 Ball Pool play online - templerun2</title>
+    <title>8 Ball Pool - upperX</title>
     <meta name="description" content="8 Ball Pool - temple run2 - Play games on Chromebook - Game unblocked templerun2">
     <style type="text/css">
 .report-modal {
