--- a/games1/play/test.html
+++ b/games1/play/test.html
@@ -2,7 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="icon" href="../images/favicon.png" sizes="32x32">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>8 Ball Pool - upperX</title>
+    <meta name="description" content="8 Ball Pool - temple run2 - Play games on Chromebook - Game unblocked templerun2">
     <style type="text/css">
 .report-modal {
   display: none;
@@ -144,3 +147,57 @@ a:hover{color: green;}
         </div>
       </div>
     </nav>    
+
+
+
+
+
+
+
+
+
+
+<div class="container">
+<!-- ads_ng -->
+
+<div class="row">
+      <div class="col-md-9">
+            <div class="game-container">
+              <div class="game-content" data-id="169">
+                <div id="allow_mobile_version"></div>     
+               <!-- 
+                <div id="mobile-play" style="display: none;">
+                  <div class="mobile-thumb-play">
+                    <img src="#">
+                  </div>
+                  <div id="mobile-play-btn">
+                    <i class="bi bi-play-circle-fill"></i>
+                  </div>
+                </div> -->
+
+
+
+                <div class="game-iframe-container" id="game-player">
+                  <div id="mobile-back-button" draggable="true">
+                    <i class="bi bi-x-circle-fill"></i>
+                  </div>
+                  <iframe class="game-iframe" id="game-area" src="https://23azostore.github.io/s8/8-ball-pool" width="1366" height="768" scrolling="none" frameborder="0" allowfullscreen=""></iframe>
+                </div>
+              </div>
+
+              <div class="game-info">
+                <div class="header-left">
+                  <h1 class="single-title">8 Ball Pool-templerun2</h1>
+                </div>
+                <div class="header-right">
+                  <div class="b-action2">
+              
+                    <a href="#" onclick="open_fullscreen()" class="btn btn-capsule"><i class="bi bi-arrows-fullscreen b-icon"></i>Fullscreen</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+<div class="vex_x" >
+<div style="text-align: justify; margin: 10px 10px 10px 10px;" > 
+<h2>Chromebook games</h2>
+ <div class="row grid-container">
