--- a/games1/play/test.html
+++ b/games1/play/test.html
@@ -181,23 +181,6 @@ a:hover{color: green;}
                   <div id="mobile-back-button" draggable="true">
                     <i class="bi bi-x-circle-fill"></i>
                   </div>
-                  <iframe class="game-iframe" id="game-area" src="https://23azostore.github.io/s8/8-ball-pool" width="1366" height="768" scrolling="none" frameborder="0" allowfullscreen=""></iframe>
+                  <iframe class="game-iframe" id="game-area" src="https://23azostore.github.io/s8/8-ball-pool" width="1366" height="768" scrolling="none" frameborder="0" allowfullscreen="1"></iframe>
                 </div>
               </div>
-
-              <div class="game-info">
-                <div class="header-left">
-                  <h1 class="single-title">8 Ball Pool-templerun2</h1>
-                </div>
-                <div class="header-right">
-                  <div class="b-action2">
-              
-                    <a href="#" onclick="open_fullscreen()" class="btn btn-capsule"><i class="bi bi-arrows-fullscreen b-icon"></i>Fullscreen</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-<div class="vex_x" >
-<div style="text-align: justify; margin: 10px 10px 10px 10px;" > 
-<h2>Chromebook games</h2>
- <div class="row grid-container">
