--- a/games1/play/test.html
+++ b/games1/play/test.html
@@ -3,9 +3,8 @@
   <head>
     <link rel="icon" href="addlogo.png" sizes="32x32">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
     <title>8 Ball Pool - upperX</title>
-    <meta name="description" content="8 Ball Pool - temple run2 - Play games on Chromebook - Game unblocked templerun2">
     <style type="text/css">
 .report-modal {
   display: none;
@@ -108,7 +107,6 @@ a:hover{color: green;}
         </a>
          <div class="navbar-collapse collapse" id="nav-menu">
         <a class="navbar-brand js-scroll-trigger" href="/">
-    <strong>8 Ball Pool</strong></a> 
         </a>
                 <div class="game-iframe-container" id="game-player">
                   <div id="mobile-back-button" draggable="true">
