--- a/games1/play/test.html
+++ b/games1/play/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="icon" href="addlogo.png" sizes="32x32">
+    <link rel="icon" href="logo.png" sizes="32x32">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
     <title>8 Ball Pool - upperX</title>
