--- a/games1/play/test.html
+++ b/games1/play/test.html
@@ -103,7 +103,7 @@ a:hover{color: green;}
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand js-scroll-trigger" href="/">
-          <img src="addlonglogo.png" width="120" height="55" class="topVAZ-logo" alt="temple run2">         
+          <img src="logo.png" width="120" height="55" class="topVAZ-logo" alt="temple run2">         
         </a>
          <div class="navbar-collapse collapse" id="nav-menu">
         <a class="navbar-brand js-scroll-trigger" href="/">
